--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,11 +19,9 @@ jobs:
           root: ./
           paths:
             - src/
-            - resources/
+            - public/
             - package.json
             - node_modules/
-            - Dockerfile
-            - docker-compose.yml
   unit_test:
     working_directory: ~/app_build
     docker:
@@ -32,6 +30,20 @@ jobs:
       - attach_workspace:
           at: ~/app_build
       - run: npm test
+
+  deploy:
+    machine:
+        enabled: true
+    working_directory: ~/app_build
+    environment:
+      HEROKU_APP: "cinewebpw"
+    steps:
+      - attach_workspace:
+          at: ~/app_build
+      - run:
+          name: Deploy Master to Heroku
+          command: |
+            git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP.git master
 
 workflows:
   version: 2
