--- a/package.json
+++ b/package.json
@@ -5,7 +5,18 @@
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "mongodb": "3.1.9"
+  },
+  "devDependencies": {
+    "eslint": "5.9.0",
+    "eslint-config-google": "0.11.0",
+    "husky": "1.1.4"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "eslint \"**/*.js\" --fix --max-warnings=0"
+    }
   },
   "scripts": {
     "start": "react-scripts start",
