--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,8 @@
         "browser": true
     },
     "rules": {
-        "max-len": ["error", {"code": 160}]
+        "max-len": ["error", {"code": 160}],
+        "require-jsdoc":"off"
     },
     "parserOptions": {
         "ecmaVersion": 2017,
