--- a/package.json
+++ b/package.json
@@ -45,18 +45,13 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.6",
-    "eslint": "5.9.0",
-    "eslint-config-google": "0.11.0",
     "husky": "1.1.4",
     "webpack-dev-server": "3.1.10"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "eslint \"**/*.js\" --fix --max-warnings=0"
+      "pre-commit": "npm run lint"
     }
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": [
     ">0.2%",
