--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ services:
 node_js:
 - '8'
 install:
-- npm install --production
+- npm install
 - npm install -g @angular/cli
 before_script:
 - npm build
