--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "mongodb": "3.1.10",
     "rxjs": "~6.3.3",
     "zone.js": "~0.8.26",
-    "@angular/cli": "~7.0.6",
+    "@angular/cli": "~7.0.6"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
