--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,23 @@ services:
 - docker
 node_js:
 - '8'
+addons:
+  apt:
+    sources:
+    - google-chrome
+    packages:
+    - google-chrome-stable
+before_install:
+  - export CHROME_BIN=/usr/bin/google-chrome
+  - export DISPLAY=:99.0
+  - sh -e /etc/init.d/xvfb start
 install:
 - npm install
 - npm install -g @angular/cli
 before_script:
 - npm build
 script:
-- npm test
+- npm test --watch=false
 deploy:
   provider: heroku
   api_key:
