--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "mongodb": "3.1.10",
     "path": "0.12.7",
     "util": "0.11.1",
-    "router": "1.3.3"
+    "router": "1.3.3",
+    "uniqid": "5.0.3"
   }
 }
