--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,8 @@
     "path": "0.12.7",
     "util": "0.11.1",
     "router": "1.3.3",
-    "uniqid": "5.0.3"
+    "uniqid": "5.0.3",
+    "cors": "2.8.5",
+    "node-fetch": "2.3.0"
   }
 }
