--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
-/tmp
-/out-tsc
+webApp/dist
+webApp/tmp
+webApp/out-tsc
 
 # dependencies
 webApp/node_modules
