--- a/webApp/package.json
+++ b/webApp/package.json
@@ -56,7 +56,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint webApp/ --fix"
+      "pre-commit": "ng lint"
     }
   },
   "engines": {
