--- a/webApp/package.json
+++ b/webApp/package.json
@@ -32,7 +32,8 @@
     "@angular/compiler-cli": "~7.0.0",
     "@angular/flex-layout": "7.0.0-beta.19",
     "typescript": "~3.1.6",
-    "express": "4.16.4"
+    "express": "4.16.4",
+    "node-fetch": "2.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
