--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "router": "1.3.3",
     "uniqid": "5.0.3",
     "cors": "2.8.5",
-    "node-fetch": "2.3.0"
+    "node-fetch": "2.3.0",
+    "https":"1.0.0"
   }
 }
