--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,12 @@
     "uniqid": "5.0.3",
     "cors": "2.8.5",
     "node-fetch": "2.3.0",
-    "https":"1.0.0"
+    "https": "1.0.0"
+  },
+  "devDependencies": {
+    "jest": "^23.6.0"
+  },
+  "scripts": {
+    "test": "jest --detectOpenHandles --forceExit"
   }
 }
