--- a/webApp/package.json
+++ b/webApp/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve --ssl true --ssl-cert \"ssl/server.crt\" --ssl-key \"ssl/server.key\"",
     "build": "ng build",
-    "test": "ng test",
+    "test": "jest",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "postinstall": "ng build --aot --prod"
@@ -14,9 +14,12 @@
   "dependencies": {
     "@angular/animations": "~7.0.0",
     "@angular/cdk": "~7.1.0",
+    "@angular/cli": "~7.0.6",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
+    "@angular/compiler-cli": "~7.0.0",
     "@angular/core": "~7.0.0",
+    "@angular/flex-layout": "7.0.0-beta.19",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
     "@angular/material": "^7.1.0",
@@ -24,35 +27,37 @@
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
     "core-js": "^2.5.4",
+    "express": "4.16.4",
     "hammerjs": "^2.0.8",
     "mongodb": "3.1.10",
+    "node-fetch": "2.3.0",
+    "puppeteer": "^1.11.0",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26",
-    "@angular/cli": "~7.0.6",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/flex-layout": "7.0.0-beta.19",
     "typescript": "~3.1.6",
-    "express": "4.16.4",
-    "node-fetch": "2.3.0"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^23.3.10",
+    "@types/node": "~8.9.4",
+    "@types/puppeteer": "^1.11.1",
     "codelyzer": "~4.5.0",
+    "husky": "1.1.4",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
+    "jest": "^23.6.0",
     "karma": "~3.0.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
+    "ts-jest": "^23.10.5",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "husky": "1.1.4",
     "webpack-dev-server": "3.1.10"
   },
   "husky": {
