--- a/webApp/package.json
+++ b/webApp/package.json
@@ -14,26 +14,27 @@
   "dependencies": {
     "@angular/animations": "~7.0.0",
     "@angular/cdk": "~7.1.0",
+    "@angular/cli": "~7.0.6",
     "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
+    "@angular/compiler-cli": "~7.0.0",
     "@angular/core": "~7.0.0",
+    "@angular/flex-layout": "7.0.0-beta.19",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
     "@angular/material": "^7.1.0",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "bcrypt-nodejs": "0.0.3",
     "core-js": "^2.5.4",
+    "express": "4.16.4",
     "hammerjs": "^2.0.8",
     "mongodb": "3.1.10",
+    "node-fetch": "2.3.0",
     "rxjs": "~6.3.3",
-    "zone.js": "~0.8.26",
-    "@angular/cli": "~7.0.6",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/flex-layout": "7.0.0-beta.19",
     "typescript": "~3.1.6",
-    "express": "4.16.4",
-    "node-fetch": "2.3.0"
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
