--- a/webApp/package.json
+++ b/webApp/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod"
+    "postinstall": "node patch-webpack.js"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +28,7 @@
     "@angular/router": "~7.0.0",
     "bcrypt-nodejs": "0.0.3",
     "core-js": "^2.5.4",
+    "crypto": "^1.0.1",
     "express": "4.16.4",
     "hammerjs": "^2.0.8",
     "mongodb": "3.1.10",
