--- a/webApp/package.json
+++ b/webApp/package.json
@@ -5,10 +5,10 @@
     "ng": "ng",
     "start": "ng serve --ssl true --ssl-cert \"ssl/server.crt\" --ssl-key \"ssl/server.key\"",
     "build": "ng build",
-    "test": "ng test",
+    "test": "NODE_TLS_REJECT_UNAUTHORIZED=\"0\" jest",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "node patch-webpack.js"
+    "postinstall": "node patch-webpack.js ; npm i -D typescript npm i @types/jest"
   },
   "private": true,
   "dependencies": {
@@ -26,24 +26,29 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@types/jest": "^23.3.12",
     "bcrypt-nodejs": "0.0.3",
     "core-js": "^2.5.4",
     "crypto": "^1.0.1",
+    "es6-promise": "^4.2.5",
     "express": "4.16.4",
     "hammerjs": "^2.0.8",
+    "isomorphic-fetch": "^2.2.1",
     "mongodb": "3.1.10",
     "node-fetch": "2.3.0",
+    "puppeteer": "^1.11.0",
     "rxjs": "~6.3.3",
-    "typescript": "~3.1.6",
+    "ts-jest": "^23.10.5",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.10.0",
     "@angular/language-service": "~7.0.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
+    "husky": "1.1.4",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -54,7 +59,7 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "husky": "1.1.4",
+    "typescript": "^3.1.6",
     "webpack-dev-server": "3.1.11"
   },
   "husky": {
