--- a/api/package.json
+++ b/api/package.json
@@ -5,17 +5,24 @@
   "main": "src/index.js",
   "author": "Cherifi-Fontenay",
   "license": "ISC",
+  "scripts": {
+    "start": "node src/index.js",
+    "test": "NODE_TLS_REJECT_UNAUTHORIZED=\"0\" jest --detectOpenHandles --forceExit"
+  },
   "dependencies": {
     "body-parser": "1.18.3",
+    "cors": "2.8.5",
+    "es6-promise": "^4.2.5",
     "express": "expressjs/express",
     "fs": "<=11.1.0",
+    "https": "1.0.0",
+    "isomorphic-fetch": "^2.2.1",
+    "jest": "^23.6.0",
     "mongodb": "3.1.10",
+    "node-fetch": "2.3.0",
     "path": "0.12.7",
-    "util": "0.11.1",
     "router": "1.3.3",
     "uniqid": "5.0.3",
-    "cors": "2.8.5",
-    "node-fetch": "2.3.0",
-    "https": "1.0.0"
+    "util": "0.11.1"
   }
 }
