ajout argument adresse mongo pour pouvoir faire des tests autre part que sur la base de donnée distante (par défaut si on précise rien la base de donnée reste la base distante cineweb)

--- a/api/package.json
+++ b/api/package.json
@@ -6,7 +6,7 @@
   "author": "Cherifi-Fontenay",
   "license": "ISC",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node src/index.js $1",
     "test": "NODE_TLS_REJECT_UNAUTHORIZED=\"0\" jest --detectOpenHandles --forceExit"
   },
   "dependencies": {
