--- a/webApp/package.json
+++ b/webApp/package.json
@@ -25,7 +25,6 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
-    "@types/jest": "^23.3.12",
     "bcrypt-nodejs": "0.0.3",
     "core-js": "^2.5.4",
     "crypto": "^1.0.1",
@@ -45,9 +44,11 @@
     "@angular/language-service": "~7.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
+    "@types/jest": "^23.3.12",
+    "@types/node": "^8.9.5",
     "codelyzer": "~4.5.0",
     "husky": "1.1.4",
+    "i": "^0.3.6",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~3.0.0",
@@ -55,10 +56,11 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "npm": "^6.5.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
-    "typescript": "^3.1.6",
+    "typescript": "^3.1.1",
     "webpack-dev-server": "3.1.11"
   },
   "husky": {
