--- a/webApp/package.json
+++ b/webApp/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --ssl true --ssl-cert \"ssl/server.crt\" --ssl-key \"ssl/server.key\"",
+    "start": "ng serve --ssl true --ssl-cert \"ssl/server.crt\" --ssl-key \"ssl/server.key\" --disableHostCheck true",
     "build": "ng build",
     "test": "NODE_TLS_REJECT_UNAUTHORIZED=\"0\" jest",
     "lint": "ng lint",
