--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/jest": "^23.3.12",
+    "bcrypt": "^3.0.3",
     "body-parser": "1.18.3",
     "cors": "2.8.5",
     "es6-promise": "^4.2.5",
