--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "scripts": {
     "start": "node src/index.js $1",
-    "test": "NODE_TLS_REJECT_UNAUTHORIZED=\"0\" jest --detectOpenHandles --forceExit"
+    "test": "NODE_TLS_REJECT_UNAUTHORIZED=\"0\" jest --detectOpenHandles --forceExit $1"
   },
   "dependencies": {
     "@types/jest": "^23.3.12",
