--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "path": "0.12.7",
     "router": "1.3.3",
     "uniqid": "5.0.3",
-    "util": "0.11.1"
+    "util": "0.11.1",
+    "bcrypt": "3.0.3"
   }
 }
